@@ -67,6 +67,7 @@ dependencies {
   libExt 'org.apache.logging.log4j:log4j-1.2-api'
   libExt 'org.apache.logging.log4j:log4j-api'
   libExt 'org.apache.logging.log4j:log4j-core'
+  libExt 'org.apache.logging.log4j:log4j-jul'
   libExt 'org.apache.logging.log4j:log4j-layout-template-json'
   libExt 'org.apache.logging.log4j:log4j-slf4j2-impl'
   libExt 'org.apache.logging.log4j:log4j-web'
